Multiple changes: - Used Service interface for services - Updates openAPI contract with search query - Implemented Specifications for Pizza - Implemented Specification Tests for Pizza
